# ml-ops-part-2

./: pyproject.toml
data/: requirement.txt
frontend/: api.py  streamlit_app.py
frontend/.ipynb_checkpoints/: api-checkpoint.py
src/: Spotify_track_popularity.ipynb
src/.ipynb_checkpoints/: Spotify_track_popularity-checkpoint.ipynb
