[project]
name = "ml-ops-part-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.27.1",
    "streamlit>=1.35.0",
    "requests>=2.31.0",
    "pydantic>=2.6.4",
    "scikit-learn>=1.4.2",
    "mlflow>=2.22.0",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "numpy>=1.26.4",
    "jupyter>=1.1.1",
    "notebook>=7.4.2",
    "kaggle>=1.7.4.5",
    "xgboost>=2.1.4",
    "blinker>=1.9.0",
]

